--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "segoe UI";
 }
 
 body {
@@ -13,43 +13,33 @@ body {
   height: 100vh;
 }
 
-.container {
-  background-color: hsl(0, 0%, 100%);
+.code-container {
+  background-color: white;
   width: 350px;
   padding: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 24px;
   border-radius: 20px;
-  margin: 20px;
 }
 
-.image {
-  border-radius: 10px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.image img {
+img {
+  border-radius: 12px;
   width: 100%;
 }
 
 .content {
   text-align: center;
-  padding: 0 18px;
-}
 
-.content h3 {
-  font-size: 22px;
-  color: hsl(218, 44%, 22%);
-  margin-bottom: 20px;
+  & h1 {
+    font-size: 24px;
+    color: hsl(218, 44%, 22%);
+    margin-bottom: 24px;
+  }
+  
+  & p {
+    color: hsl(220, 15%, 55%);
+    margin-bottom: 30px;
+  }
 }
-
-.content p {
-  color: hsl(220, 15%, 55%);
-  font-size: 15px;
-  margin-bottom: 30px;
-}
-
